--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,9 @@
 buildscript {
+    // we have added location to download plugins in settings.gradle right?
+    // the stuff that is to be downloaded to build the projects goes in the dependencies
+    // section below. remember this buildscript block is only for specifying LIBS/PLUGINS THAT
+    // IS USED TO BUILD THE PROJECTS, not anything you can use inside the project and you can
+    // see the changes in phone or emulator.
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
         // NOTE: Do not place your application dependencies here; they belong
@@ -8,7 +13,8 @@ buildscript {
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 
-
+// plugins are specified here again!!?? the above buildscript{dependencies{}} block and this are same I think
+// these are also the plugins with their name and version but specified in different way
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
